Added endpoint for login with google
