# server/api/controllers/authorization/router.ts
@@ -1,0 +1,4 @@
+import express from 'express';
+import controller from './controller'
+export default express.Router()
+    .post('/login', controller.login);
